using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public class AnimatorID
{
    public static readonly int HasInputID = Animator.StringToHash("HasInput");
    public static readonly int JumpID = Animator.StringToHash("Jump");
    public static readonly int YVelocityID = Animator.StringToHash("yVelocity");
    public static readonly int SlideOutID = Animator.StringToHash("SlideOut");
    public static readonly int AirID = Animator.StringToHash("Air");
    public static readonly int Charge1ID = Animator.StringToHash("ChargeAttack1");
}
